[project]
name = "tbongkim03_cmd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tbongkim03_cmd = "tbongkim03_cmd.cmd:call"

[tool.pdm]
distribution = true
